# solcpp

./: CMakeLists.txt  README.md  conanfile.txt
examples/: CMakeLists.txt  f.py  getAccountInfo.cpp  placeOrder.cpp  sendTransaction.cpp
include/: base58.hpp  int128.hpp  solana.hpp
lib/: CMakeLists.txt  solana.cpp
tests/: CMakeLists.txt  main.cpp
